--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </div>
 
   <script>
-    const API = 'http://localhost:3001/api';
+    const API = 'https://project-bbau.onrender.com';
     let token = '';
 
     function login() {
