--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   </div>
 
   <script>
-    const API = 'https://project-bbau.onrender.com';
+    const API = 'https://project-bbau.onrender.com/register';
     let token = '';
 
     function login() {
