--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     function login() {
       const username = document.getElementById('loginUsername').value;
       const password = document.getElementById('loginPassword').value;
-      fetch(`${API}/login`, {
+      fetch(`https://project-bbau.onrender.com/login`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -112,7 +112,7 @@
     function register() {
       const username = document.getElementById('registerUsername').value;
       const password = document.getElementById('registerPassword').value;
-      fetch(`${API}/register`, {
+      fetch(`https://project-bbau.onrender.com/register`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -137,7 +137,7 @@
         return;
       }
 
-      fetch(`${API}/calc/sum`, {
+      fetch(`https://project-bbau.onrender.com/calc/sum`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
@@ -153,7 +153,7 @@
     }
 
     function loadHistory() {
-      fetch(`${API}/calc/history`, {
+      fetch(`https://project-bbau.onrender.com/calc/history`, {
         headers: {
           'Authorization': token
         }
