--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   </div>
 
   <script>
-    const API = 'https://project-bbau.onrender.com/register';
+    //const API = 'https://project-bbau.onrender.com/auth/register';
     let token = '';
 
     function login() {
       const username = document.getElementById('loginUsername').value;
       const password = document.getElementById('loginPassword').value;
-      fetch(`https://project-bbau.onrender.com/login`, {
+      fetch(`https://project-bbau.onrender.com/auth/login`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -112,7 +112,7 @@
     function register() {
       const username = document.getElementById('registerUsername').value;
       const password = document.getElementById('registerPassword').value;
-      fetch(`https://project-bbau.onrender.com/register`, {
+      fetch(`https://project-bbau.onrender.com/auth/register`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
