--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   </div>
 
   <script>
-    //const API = 'https://project-bbau.onrender.com/auth/register';
+    const API = 'https://project-bbau.onrender.com';
     let token = '';
 
     function login() {
       const username = document.getElementById('loginUsername').value;
       const password = document.getElementById('loginPassword').value;
-      fetch(`https://project-bbau.onrender.com/login`, {
+      fetch(`${API}/login`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -112,7 +112,7 @@
     function register() {
       const username = document.getElementById('registerUsername').value;
       const password = document.getElementById('registerPassword').value;
-      fetch(`https://project-bbau.onrender.com/register`, {
+      fetch(`${API}/register`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -137,7 +137,7 @@
         return;
       }
 
-      fetch(`https://project-bbau.onrender.com/sum`, {
+      fetch(`${API}/sum`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
@@ -153,7 +153,7 @@
     }
 
     function loadHistory() {
-      fetch(`https://project-bbau.onrender.com/history`, {
+      fetch(`${API}/history`, {
         headers: {
           'Authorization': token
         }
